character api doc update and  update weapon api
